--- a/Project chapters/amplitudeofsound.css
+++ b/Project chapters/amplitudeofsound.css
@@ -1,6 +1,6 @@
 body {
     font-family: "futura";
-    background-image: url("/Project chapters/amplitude wallpaper/amplitude wallpaper.1.jpeg");
+    background-image: url("../Project chapters/amplitude wallpaper/amplitude wallpaper.1.jpeg");
     margin-left: 0px;
     margin-top: 30px;
     background-repeat: no-repeat;
