--- a/mobile.css
+++ b/mobile.css
@@ -118,7 +118,7 @@ h1{
     font-family: Futura;
     font-weight: 100;
     text-align: center;
-    font-size: 30px;
+    font-size: 5vw;
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Optional: Adds a shadow effect */
     /* Smooth zoom effect */
     margin-top: 120px; /* Remove unnecessary margins */
