--- a/mobile.css
+++ b/mobile.css
@@ -30,7 +30,7 @@ body {
     justify-content: space-around; /* Space items evenly */
     align-items: center; /* Center items vertically */
     background-color: rgba(66, 70, 74, 0.8);
-    padding: clamp(10px, 2vw, 20px); /* Responsive padding */
+    padding: clamp(10px, 4vw, 20px); /* Responsive padding */
     position: fixed;
     top: 0;
     left: 0;
@@ -41,17 +41,29 @@ body {
     list-style-type: none;
     display: flex;
     justify-content: space-around; /* Space items evenly */
+    align-items: center; /* Center items vertically */
     width: 100%;
     margin: 0;
     padding: 0;
 }
 
+
+
 .navbar a {
     color: white;
     text-decoration: none;
-    font-size: clamp(12px, 2vw, 18px); /* Responsive font size */
-    padding: clamp(5px, 1vw, 10px); /* Responsive padding */
+    font-size: clamp(14px, 4vw, 18px); /* Responsive font size */
+    padding: clamp(5px, 2vw, 10px); /* Responsive padding */
     text-align: center;
+}
+@media (max-width: 480px) {
+    .navbar {
+        padding: 10px; /* Smaller padding for very small screens */
+    }
+
+    .navbar a {
+        font-size: 12px; /* Smaller font size for very small screens */
+    }
 }
 
 .navbar a.active {
